codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__navigation_reconnect__daemon_command_center_failed.snap
---
source: tui/src/app/tests/navigation_reconnect_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 100)"
---
  Agent command center  Group: Project  g
   All 2   Needs you 0   Working 1   Ready 1   Inactive 0
  ────────────────────────────────────────────────────────────────────────────────────────────────
  Rename › Keep this task draft!                          │ Task details
      Tasks                           Model               │
  /tmp/project  2                                         │ Selected task
  › ● Selected task                   Unknown             │ ● Working
    ○ Vanished task                   Unknown             │
                                                          │ Model: Unknown
                                                          │ Reasoning: Unknown
                                                          │
                                                          │ Project
                                                          │ /tmp/project
                                                          │
                                                          │ Prompt
                                                          │ Selected task
                                                          │
                                                          │
                                                          │
                                                          │
                                                          │
                                                          │
                                                          │
  Reconnect failed — agent list is stale; relaunch to retry
