codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__navigation_reconnect__daemon_command_center_vanished_rename.snap
---
source: tui/src/app/tests/navigation_reconnect_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 100)"
---
  Agent command center  Group: Project  g
   All 2   Needs you 0   Working 1   Ready 1   Inactive 0                          tab/⇧tab filter
  ────────────────────────────────────────────────────────────────────────────────────────────────
      Tasks                                               │ Task details
  /tmp/project  2                                         │
    ● New task                                            │ Selected task
  › ○ Selected task                                       │ ○ Ready
                                                          │
                                                          │ Model: Unknown
                                                          │ Reasoning: Unknown
                                                          │
                                                          │ Project
                                                          │ /tmp/project
                                                          │
                                                          │ Prompt
                                                          │ Selected task
                                                          │
                                                          │
                                                          │
                                                          │
                                                          │
                                                          │
                                                          │
  Service v2.0.0 ≠ Elpis CLI v0.0.0 · /daemon
